updated thursday background

--- a/index.html
+++ b/index.html
@@ -46,12 +46,23 @@ footer {
   opacity: .6;
 }
 a { color: var(--accent); text-decoration: none; }
+
+@keyframes rainbowAnim {
+  0%   { background-position: 0% 50%; }
+  50%  { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+.rainbow {
+  background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
+  background-size: 400% 400%;
+  animation: rainbowAnim 15s ease infinite;
+}
 </style>
 </head>
 <body>
 <h1 id="heading"></h1>
 <div id="quote"></div>
-<img id="broImg" src="broday.jpg" alt="Bro Day" style="display:none;">
+<img id="broImg" src="pics/1.jpeg" alt="Bro Day" style="display:none;">
 <footer>Made with 🤙 by IsItBroDay.com</footer>
 <script>
 const quotes = [
@@ -87,6 +98,7 @@ function updatePage(){
   const heading = document.getElementById('heading');
   const quoteEl = document.getElementById('quote');
   const imgEl = document.getElementById('broImg');
+  document.body.classList.toggle('rainbow', isThursday);
   if(isThursday){
      heading.textContent = "YES. IT IS BRO DAY 🕺";
      quoteEl.style.display = 'none';
@@ -102,4 +114,3 @@ updatePage();
 </script>
 </body>
 </html>
-
