update to white

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 :root {
-  --bg: #0d0d0d;
+  --bg: #ffffff;
   --accent: #ff55a1;
-  --text: #fefefe;
+  --text: #000000;
   --font-main: 'Inter', sans-serif;
 }
 * { box-sizing: border-box; }
@@ -22,6 +22,7 @@ body {
   background: var(--bg);
   color: var(--text);
   font-family: var(--font-main);
+  font-size: 1.25rem;
   padding: 2rem;
   text-align: center;
 }
